<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:layout_columnSpan="4"
    android:gravity="center"
    android:orientation="horizontal">
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button_CE"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_CE"/>
        <Button
            android:id="@+id/button_C"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_C"/>
        <Button
            android:id="@+id/button_percent"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_percent"/>
        <Button
            android:id="@+id/button_add"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_add"/>
        </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button1"/>
        <Button
            android:id="@+id/button2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button2"/>
        <Button
            android:id="@+id/button3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button3"/>
        <Button
            android:id="@+id/button_sub"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_sub"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button4"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button4"/>
        <Button
            android:id="@+id/button5"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button5"/>
        <Button
            android:id="@+id/button6"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button6"/>
        <Button
            android:id="@+id/button_mul"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_mul"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button7"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button7"/>
        <Button
            android:id="@+id/button8"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button8"/>
        <Button
            android:id="@+id/button9"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button9"/>
        <Button
            android:id="@+id/button_div"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_div"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:gravity="center">
        <Button
            android:id="@+id/button0"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button0"
            android:layout_span="2"/>
        <Button
            android:id="@+id/button_point"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_point"/>
        <Button
            android:id="@+id/button_equals"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="@dimen/button_text"
            android:text="@string/button_equals"/>
    </TableRow>
</TableLayout>